Simplified account array and cosmetic changes

--- a/resources/templates/provision/yealink/t41s/{$mac}.cfg
+++ b/resources/templates/provision/yealink/t41s/{$mac}.cfg
@@ -3,34 +3,32 @@
 
 ##File header "#!version:1.0.0.1" can not be edited or deleted, and must be placed in the first line.##
 
-
 {foreach $lines as $row}
 
 #######################################################################################
-##                           Account 1 Basic Settings                                ##
+##                   Account range 1-6 Basic Settings                                ##
 #######################################################################################
-
 ## ranges from 1 to 6;
 ##account.X.enable =
 
-{if isset($account.{$row.line_number}.password) }
+{if isset($row.password) }
 account.{$row.line_number}.enable = 1
 {else}
 account.{$row.line_number}.enable = 0
 {/if}
-account.{$row.line_number}.label = {$account.{$row.line_number}.display_name}
-account.{$row.line_number}.display_name = {$account.{$row.line_number}.display_name}
-account.{$row.line_number}.auth_name = {$account.{$row.line_number}.auth_id}
-account.{$row.line_number}.password = {$account.{$row.line_number}.password}
-{if isset($account.{$row.line_number}.server.1.address)}
-account.{$row.line_number}.user_name = {$account.{$row.line_number}.user_id}@{$account.{$row.line_number}.server_address}
+account.{$row.line_number}.label = {$row.display_name}
+account.{$row.line_number}.display_name = {$row.display_name}
+account.{$row.line_number}.auth_name = {$row.auth_id}
+account.{$row.line_number}.password = {$row.password}
+{if isset($row.server.1.address)}
+account.{$row.line_number}.user_name = {$row.user_id}@{$row.server_address}
 {else}
-account.{$row.line_number}.user_name = {$account.{$row.line_number}.user_id}
+account.{$row.line_number}.user_name = {$row.user_id}
 {/if}
-account.{$row.line_number}.sip_server_host = {$account.{$row.line_number}.server_address}
-account.{$row.line_number}.sip_server_port = {$account.{$row.line_number}.sip_port}
-account.{$row.line_number}.outbound_host = {$account.{$row.line_number}.outbound_proxy}
-account.{$row.line_number}.outbound_port = {$account.{$row.line_number}.sip_port}
+account.{$row.line_number}.sip_server_host = {$row.server_address}
+account.{$row.line_number}.sip_server_port = {$row.sip_port}
+account.{$row.line_number}.outbound_host = {$row.outbound_proxy}
+account.{$row.line_number}.outbound_port = {$row.sip_port}
 {if isset($yealink_sip_listen_port)}account.{$row.line_number}.sip_listen_port = {$yealink_sip_listen_port}{else}account.{$row.line_number}.sip_listen_port = 5060{/if}
 
 #Configure the transport type; 0-UDP (default), 1-TCP, 2-TLS, 3-DNS SRV;
@@ -39,19 +37,19 @@ account.{$row.line_number}.outbound_port = {$account.{$row.line_number}.sip_port
 {if $account.{$row.line_number}.sip_transport == 'tls'}account.{$row.line_number}.transport = 2{/if}
 {if $account.{$row.line_number}.sip_transport == 'dns srv'}account.{$row.line_number}.transport = 3{/if}
 
-account.{$row.line_number}.outbound_proxy.1.address = {$account.{$row.line_number}.outbound_proxy_primary}
-account.{$row.line_number}.outbound_proxy.2.address = {$account.{$row.line_number}.outbound_proxy_secondary}
-account.{$row.line_number}.outbound_proxy_enable = {if isset($account.{$row.line_number}.outbound_proxy_primary)}1{else}0{/if}
+account.{$row.line_number}.outbound_proxy.1.address = {$row.outbound_proxy_primary}
+account.{$row.line_number}.outbound_proxy.2.address = {$row.outbound_proxy_secondary}
+account.{$row.line_number}.outbound_proxy_enable = {if isset($row.outbound_proxy_primary)}1{else}0{/if}
 
 {if isset($outbound_proxy_1_port)}
 account.{$row.line_number}.outbound_proxy.1.port = {$outbound_proxy_1_port}
 {else}
-account.{$row.line_number}.outbound_proxy.1.port = {$account.{$row.line_number}.sip_port}
+account.{$row.line_number}.outbound_proxy.1.port = {$row.sip_port}
 {/if}
 {if isset($outbound_proxy_1_port)}
 account.{$row.line_number}.outbound_proxy.2.port = {$outbound_proxy_2_port}
 {else}
-account.{$row.line_number}.outbound_proxy.2.port = {$account.{$row.line_number}.sip_port}
+account.{$row.line_number}.outbound_proxy.2.port = {$row.sip_port}
 {/if}
 
 {/foreach}
@@ -69,8 +67,8 @@ account.{$row.line_number}.failback_timeout = 3600
 account.{$row.line_number}.naptr_build = 0
 account.{$row.line_number}.fallback.redundancy_type = 0
 account.{$row.line_number}.fallback.timeout = {$yealink_outbound_proxy_fallback_interval}
-account.{$row.line_number}.sip_server.1.address = {$account.{$row.line_number}.server.1.address}
-account.{$row.line_number}.sip_server.1.port = {$account.{$row.line_number}.sip_port}
+account.{$row.line_number}.sip_server.1.address = {$row.server.1.address}
+account.{$row.line_number}.sip_server.1.port = {$row.sip_port}
 
 #Configure the transport type; 0-UDP (default), 1-TCP, 2-TLS, 3-DNS-NAPTR;
 {if $account.{$row.line_number}.sip_transport == 'udp'}account.{$row.line_number}.sip_server.1.transport_type = 0{/if}
@@ -79,13 +77,13 @@ account.{$row.line_number}.sip_server.1.port = {$account.{$row.line_number}.sip_
 {if $account.{$row.line_number}.sip_transport == 'dns srv'}account.{$row.line_number}.sip_server.1.transport_type = 3{/if}
 
 #Configure the register expiry time (in seconds), the default value is 3600.
-account.{$row.line_number}.sip_server.1.expires = {$account.{$row.line_number}.register_expires}
+account.{$row.line_number}.sip_server.1.expires = {$row.register_expires}
 account.{$row.line_number}.sip_server.1.retry_counts = 3
 account.{$row.line_number}.sip_server.1.failback_mode = 0
 account.{$row.line_number}.sip_server.1.failback_timeout = 3600
 account.{$row.line_number}.sip_server.1.register_on_enable = 0
-account.{$row.line_number}.sip_server.2.address = {$account.{$row.line_number}.server.2.address}
-account.{$row.line_number}.sip_server.2.port = {$account.{$row.line_number}.sip_port}
+account.{$row.line_number}.sip_server.2.address = {$row.server.2.address}
+account.{$row.line_number}.sip_server.2.port = {$row.sip_port}
 
 #Configure the transport type; 0-UDP (default), 1-TCP, 2-TLS, 3-DNS-NAPTR;
 {if $account.{$row.line_number}.sip_transport == 'udp'}account.{$row.line_number}.sip_server.2.transport_type = 0{/if}
@@ -93,7 +91,7 @@ account.{$row.line_number}.sip_server.2.port = {$account.{$row.line_number}.sip_
 {if $account.{$row.line_number}.sip_transport == 'tls'}account.{$row.line_number}.sip_server.2.transport_type = 2{/if}
 {if $account.{$row.line_number}.sip_transport == 'dns srv'}account.{$row.line_number}.sip_server.2.transport_type = 3{/if}
 
-account.{$row.line_number}.sip_server.2.expires = {$account.{$row.line_number}.register_expires}
+account.{$row.line_number}.sip_server.2.expires = {$row.register_expires}
 account.{$row.line_number}.sip_server.2.retry_counts = 3
 account.{$row.line_number}.sip_server.2.failback_mode = 0
 account.{$row.line_number}.sip_server.2.failback_timeout = 3600
@@ -151,7 +149,6 @@ account.{$row.line_number}.reg_fail_retry_interval =
 #########################################################################
 ##                     NAT Settings                                    ##
 #########################################################################
-
 #Enable or disable the NAT traversal; 0-Disabled (default), 1-STUN;
 account.{$row.line_number}.nat.nat_traversal = {if isset($stun_server)}1{else}0{/if}
 
@@ -222,8 +219,8 @@ account.{$row.line_number}.out_dialog_blf_enable = 0
 ##account.X.shared_line =
 
 #Assign account1 as shared line; 0-Disabled (default), 1-Broadsoft SCA, 2-BLA;
-{if isset($account.{$row.line_number}.shared_line) }
-account.{$row.line_number}.shared_line = {$account.{$row.line_number}.shared_line}
+{if isset($row.shared_line) }
+account.{$row.line_number}.shared_line = {$row.shared_line}
 {else}
 account.{$row.line_number}.shared_line = 0
 {/if}
@@ -398,8 +395,7 @@ account.{$row.line_number}.picture_info_enable = 1
 account.{$row.line_number}.conf_type = {if $nway_conference == true}2{/if}
 
 #Configure the conference URI (a SIP URI, or use part of the SIP URI). For example, "conference@domain.com" or "conference".
-account.{$row.line_number}.conf_uri = {if $nway_conference == true}nway{$account.{$row.line_number}.auth_id}@{$account.{$row.line_number}.server_address}{/if}
-
+account.{$row.line_number}.conf_uri = {if $nway_conference == true}nway{$row.auth_id}@{$row.server_address}{/if}
 
 #######################################################################################
 ##                            cid_source                                             ##
@@ -462,7 +458,6 @@ account.{$row.line_number}.dnd.off_code =
 #######################################################################################
 ##                                 Call Forward                                      ##
 #######################################################################################
-
 account.{$row.line_number}.always_fwd.enable =
 account.{$row.line_number}.always_fwd.target =
 account.{$row.line_number}.always_fwd.off_code =
@@ -534,7 +529,6 @@ account.{$row.line_number}.xsi.port =
 #######################################################################################
 ##                             Line Key                                              ##
 #######################################################################################
-
 #The x of the parameter "linekey.x.line" ranges from 1 to 6.
 #The default value equals to the value of x. For example, the default value of the parameter "linekey.1.line" is 1.
 #linekey.x.lable--Define the label for each line key. Meet-Me Conference "1" or BLF "16" require pick_value.
@@ -607,7 +601,6 @@ expansion_module.1.key.{$row.device_key_id}.xml_phonebook =
 ##########################################################################################
 ##                                  Expansion Module 2                                  ##
 ##########################################################################################
-
 {foreach $keys["expansion-2"] as $row}
 expansion_module.2.key.{$row.device_key_id}.type = {$row.device_key_type}
 expansion_module.2.key.{$row.device_key_id}.line = {$row.device_key_line}
@@ -621,7 +614,6 @@ expansion_module.2.key.{$row.device_key_id}.xml_phonebook =
 ##########################################################################################
 ##                                  Expansion Module 3                                  ##
 ##########################################################################################
-
 {foreach $keys["expansion-3"] as $row}
 expansion_module.3.key.{$row.device_key_id}.type = {$row.device_key_type}
 expansion_module.3.key.{$row.device_key_id}.line = {$row.device_key_line}
@@ -635,7 +627,6 @@ expansion_module.3.key.{$row.device_key_id}.xml_phonebook =
 ##########################################################################################
 ##                                  Expansion Module 4                                  ##
 ##########################################################################################
-
 {foreach $keys["expansion-4"] as $row}
 expansion_module.4.key.{$row.device_key_id}.type = {$row.device_key_type}
 expansion_module.4.key.{$row.device_key_id}.line = {$row.device_key_line}
@@ -649,7 +640,6 @@ expansion_module.4.key.{$row.device_key_id}.xml_phonebook =
 ##########################################################################################
 ##                                  Expansion Module 5                                  ##
 ##########################################################################################
-
 {foreach $keys["expansion-5"] as $row}
 expansion_module.5.key.{$row.device_key_id}.type = {$row.device_key_type}
 expansion_module.5.key.{$row.device_key_id}.line = {$row.device_key_line}
@@ -663,7 +653,6 @@ expansion_module.5.key.{$row.device_key_id}.xml_phonebook =
 ##########################################################################################
 ##                                  Expansion Module 6                                  ##
 ##########################################################################################
-
 {foreach $keys["expansion-6"] as $row}
 expansion_module.6.key.{$row.device_key_id}.type = {$row.device_key_type}
 expansion_module.6.key.{$row.device_key_id}.line = {$row.device_key_line}
