Updated array to simplify

--- a/resources/templates/provision/yealink/t41s/{$mac}.cfg
+++ b/resources/templates/provision/yealink/t41s/{$mac}.cfg
@@ -8,6 +8,7 @@
 #######################################################################################
 ##                   Account range 1-6 Basic Settings                                ##
 #######################################################################################
+
 ## ranges from 1 to 6;
 ##account.X.enable =
 
@@ -57,6 +58,7 @@ account.{$row.line_number}.outbound_proxy.2.port = {$row.sip_port}
 #######################################################################################
 ##                          Failback                                                 ##
 #######################################################################################
+
 ## ranges from 1 to 6;
 ##account.X.reregister_enable = 0
 
@@ -121,6 +123,7 @@ account.{$row.line_number}.static_cache_pri = 0
 #######################################################################################
 ##                           Register Advanced                                       ##
 #######################################################################################
+
 ## ranges from 1 to 6;
 ##account.X.sip_server_type =
 
@@ -149,6 +152,7 @@ account.{$row.line_number}.reg_fail_retry_interval =
 #########################################################################
 ##                     NAT Settings                                    ##
 #########################################################################
+
 #Enable or disable the NAT traversal; 0-Disabled (default), 1-STUN;
 account.{$row.line_number}.nat.nat_traversal = {if isset($stun_server)}1{else}0{/if}
 
@@ -171,6 +175,7 @@ account.{$row.line_number}.nat.rport = {$yealink_rport}
 #######################################################################################
 ##                            AccountX Advance Settings                              ##
 #######################################################################################
+
 ## ranges from 1 to 6;
 ##account.X.advanced.timer_t1 = 0.5
 ##voice_mail.number.X =
@@ -185,6 +190,7 @@ voice_mail.number.1 = {$voicemail_number}
 #######################################################################################
 ##                            Subscribe                                              ##
 #######################################################################################
+
 ## ranges from 1 to 6;
 ##account.X.subscribe_mwi =
 
@@ -199,6 +205,7 @@ account.{$row.line_number}.subscribe_acd_expires= 3600
 #######################################################################################
 ##                            BLF List                                               ##
 #######################################################################################
+
 ## ranges from 1 to 6;
 ##account.X.blf.blf_list_uri =
 
@@ -215,6 +222,7 @@ account.{$row.line_number}.out_dialog_blf_enable = 0
 #######################################################################################
 ##                            BLA/SCA                                                ##
 #######################################################################################
+
 ## ranges from 1 to 6;
 ##account.X.shared_line =
 
@@ -232,6 +240,7 @@ account.{$row.line_number}.bla_subscribe_period = 300
 #######################################################################################
 ##                            Audio Codec                                            ##
 #######################################################################################
+
 #Audio codecs for account1 (Y ranges from 1 to 11).
 #Enable or disable the specified codec; 0-Disabled, 1-Enabled;
 #account.{$row.line_number}.codec.Y.enable =
@@ -337,6 +346,7 @@ account.{$row.line_number}.codec.13.rtpmap = 106
 #######################################################################################
 ##                            Audio Advanced                                         ##
 #######################################################################################
+
 #Specify whether to encrypt the SIP messages; 0-Disabled (default), 1-Forced, 2-Negotiated;
 account.{$row.line_number}.srtp_encryption = {$yealink_srtp_encryption}
 
@@ -346,6 +356,7 @@ account.{$row.line_number}.ptime =
 #######################################################################################
 ##                            Anonymous Call                                         ##
 #######################################################################################
+
 account.{$row.line_number}.anonymous_call = 0
 account.{$row.line_number}.anonymous_call_oncode =
 account.{$row.line_number}.anonymous_call_offcode =
@@ -357,6 +368,7 @@ account.{$row.line_number}.anonymous_reject_offcode =
 #######################################################################################
 ##                            Pickup Code                                            ##
 #######################################################################################
+
 account.{$row.line_number}.dialoginfo_callpickup = 0
 
 #Configure the directed and group pickup codes for account 1, the settings on a per-account basis take precedence over the settings on the phone.
@@ -366,6 +378,7 @@ account.{$row.line_number}.direct_pickup_code =
 #######################################################################################
 ##                            DTMF                                                   ##
 #######################################################################################
+
 #Configure the DTMF type; 0-INBAND, 1-RFC2833 (default), 2-SIP INFO, 3-AUTO+SIP INFO;
 account.{$row.line_number}.dtmf.type = {$yealink_dtmf_type}
 
@@ -378,6 +391,7 @@ account.{$row.line_number}.dtmf.dtmf_payload =
 #######################################################################################
 ##                            Alert info                                             ##
 #######################################################################################
+
 #Enable or disable to use the Distinctive Ring Tones; 0-Disabled , 1-Enabled(default);
 account.{$row.line_number}.alert_info_url_enable =
 
@@ -391,6 +405,7 @@ account.{$row.line_number}.picture_info_enable = 1
 #######################################################################################
 ##                            Conference                                             ##
 #######################################################################################
+
 #Configure the conference type; 0-Local (default), 2-Network Conference;
 account.{$row.line_number}.conf_type = {if $nway_conference == true}2{/if}
 
@@ -400,7 +415,8 @@ account.{$row.line_number}.conf_uri = {if $nway_conference == true}nway{$row.aut
 #######################################################################################
 ##                            cid_source                                             ##
 #######################################################################################
-#Configure the type of SIP header(s) to carry the caller ID; 0-FROM (default), 1-PAI 2-PAI-FROM, 3-PRID-PAI-FROM, 4-PAI-RPID-FROM, 5-RPID-FROM;
+
+Configure the type of SIP header(s) to carry the caller ID; 0-FROM (default), 1-PAI 2-PAI-FROM, 3-PRID-PAI-FROM, 4-PAI-RPID-FROM, 5-RPID-FROM;
 account.{$row.line_number}.cid_source = {$yealink_cid_source}
 
 account.{$row.line_number}.cid_source_privacy = 1
@@ -412,6 +428,7 @@ account.{$row.line_number}.cp_source = 2
 #######################################################################################
 ##                            Session Timer                                          ##
 #######################################################################################
+
 #Enable or disable the session timer, 0-Disabled (default), 1-Enabled;
 account.{$row.line_number}.session_timer.enable = {$yealink_session_timer}
 
@@ -424,6 +441,7 @@ account.{$row.line_number}.session_timer.refresher =
 #######################################################################################
 ##                            Music on Hold                                          ##
 #######################################################################################
+
 #Configure the type of Music on Hold; 0-Send the INVITE request to Music on Hold Server then hold the call; 1-Hold the call then send the INVITE request to Music on Hold Server;
 #Require reboot;
 account.{$row.line_number}.music_on_hold_type =
@@ -433,6 +451,7 @@ account.{$row.line_number}.music_server_uri =
 #######################################################################################
 ##                            Advanced                                               ##
 #######################################################################################
+
 #Enable or disable the auto answer feature; 0-Disabled (default), 1-Enabled;
 account.{$row.line_number}.auto_answer =
 
@@ -451,6 +470,7 @@ account.{$row.line_number}.compact_header_enable =
 #######################################################################################
 ##                                   DND                                             ##
 #######################################################################################
+
 account.{$row.line_number}.dnd.enable =
 account.{$row.line_number}.dnd.on_code =
 account.{$row.line_number}.dnd.off_code =
@@ -458,6 +478,7 @@ account.{$row.line_number}.dnd.off_code =
 #######################################################################################
 ##                                 Call Forward                                      ##
 #######################################################################################
+
 account.{$row.line_number}.always_fwd.enable =
 account.{$row.line_number}.always_fwd.target =
 account.{$row.line_number}.always_fwd.off_code =
@@ -479,6 +500,7 @@ account.{$row.line_number}.timeout_fwd.on_code =
 #######################################################################################
 ##                                 Broadsoft Hoteling                                ##
 #######################################################################################
+
 account.{$row.line_number}.hoteling.enable = 0
 account.{$row.line_number}.hoteling.user_id = 0
 account.{$row.line_number}.hoteling.password = 0
@@ -487,6 +509,7 @@ account.{$row.line_number}.hoteling.auto_login_enable = 0
 #######################################################################################
 ##                                 Broadsoft ACD                                     ##
 #######################################################################################
+
 account.{$row.line_number}.acd.enable = 0
 account.{$row.line_number}.acd.unavailable_reason_enable = 0
 account.{$row.line_number}.acd.available = 0
@@ -495,6 +518,7 @@ account.{$row.line_number}.acd.initial_state = 1
 #######################################################################################
 ##                                 Broadsoft ACD Call Center                         ##
 #######################################################################################
+
 #Configure the ACD reason code of Broadsoft.(The valus of Y must be consecutive numbers.)
 #account.{$row.line_number}.bw_acd_reason_code.Y = 500(lunch time)
 account.{$row.line_number}.bw_acd_reason_code.1 =
@@ -509,6 +533,7 @@ account.{$row.line_number}.supervisor_info_code_name.1 =
 #######################################################################################
 ##                                 Broadsoft Call Center                             ##
 #######################################################################################
+
 account.{$row.line_number}.call_center.call_info_enable = 0
 account.{$row.line_number}.call_center.show_call_info_time = 30
 account.{$row.line_number}.call_center.disp_code_enable = 0
@@ -520,6 +545,7 @@ account.{$row.line_number}.call_center.queue_status_light_enable = 0
 #######################################################################################
 ##                                 Broadsoft XSI                                     ##
 #######################################################################################
+
 account.{$row.line_number}.xsi.user =
 account.{$row.line_number}.xsi.password =
 account.{$row.line_number}.xsi.host =
@@ -529,6 +555,7 @@ account.{$row.line_number}.xsi.port =
 #######################################################################################
 ##                             Line Key                                              ##
 #######################################################################################
+
 #The x of the parameter "linekey.x.line" ranges from 1 to 6.
 #The default value equals to the value of x. For example, the default value of the parameter "linekey.1.line" is 1.
 #linekey.x.lable--Define the label for each line key. Meet-Me Conference "1" or BLF "16" require pick_value.
@@ -551,6 +578,7 @@ linekey.{$row.device_key_id}.label = {$row.device_key_label}
 #######################################################################################
 ##                             Memory Key (For T38G only)                            ##
 #######################################################################################
+
 #X ranges from 1 to 10;
 #memorykey.x.line--Configure the desired line to apply the key feature. It ranges from 0 to 6.
 #The value 0 of the "memorykey.x.line" stands for Auto, it means the first available line.
@@ -580,6 +608,7 @@ memorykey.{$row.device_key_id}.sub_type =
 ##########################################################################################
 ##                                  Expansion Module 1                                  ##
 ##########################################################################################
+
 #X ranges from 1 to 16, Y ranges from 1 to 40.
 #expansion_module.x.key.y.type = 37 (Switch by default)
 #expansion_module.x.key.y.line = 0
@@ -601,6 +630,7 @@ expansion_module.1.key.{$row.device_key_id}.xml_phonebook =
 ##########################################################################################
 ##                                  Expansion Module 2                                  ##
 ##########################################################################################
+
 {foreach $keys["expansion-2"] as $row}
 expansion_module.2.key.{$row.device_key_id}.type = {$row.device_key_type}
 expansion_module.2.key.{$row.device_key_id}.line = {$row.device_key_line}
@@ -614,6 +644,7 @@ expansion_module.2.key.{$row.device_key_id}.xml_phonebook =
 ##########################################################################################
 ##                                  Expansion Module 3                                  ##
 ##########################################################################################
+
 {foreach $keys["expansion-3"] as $row}
 expansion_module.3.key.{$row.device_key_id}.type = {$row.device_key_type}
 expansion_module.3.key.{$row.device_key_id}.line = {$row.device_key_line}
@@ -627,6 +658,7 @@ expansion_module.3.key.{$row.device_key_id}.xml_phonebook =
 ##########################################################################################
 ##                                  Expansion Module 4                                  ##
 ##########################################################################################
+
 {foreach $keys["expansion-4"] as $row}
 expansion_module.4.key.{$row.device_key_id}.type = {$row.device_key_type}
 expansion_module.4.key.{$row.device_key_id}.line = {$row.device_key_line}
@@ -640,6 +672,7 @@ expansion_module.4.key.{$row.device_key_id}.xml_phonebook =
 ##########################################################################################
 ##                                  Expansion Module 5                                  ##
 ##########################################################################################
+
 {foreach $keys["expansion-5"] as $row}
 expansion_module.5.key.{$row.device_key_id}.type = {$row.device_key_type}
 expansion_module.5.key.{$row.device_key_id}.line = {$row.device_key_line}
@@ -653,6 +686,7 @@ expansion_module.5.key.{$row.device_key_id}.xml_phonebook =
 ##########################################################################################
 ##                                  Expansion Module 6                                  ##
 ##########################################################################################
+
 {foreach $keys["expansion-6"] as $row}
 expansion_module.6.key.{$row.device_key_id}.type = {$row.device_key_type}
 expansion_module.6.key.{$row.device_key_id}.line = {$row.device_key_line}
