Added an array replacing the account #'s and a few cosmetic changes

--- a/resources/templates/provision/yealink/t27g/{$mac}.cfg
+++ b/resources/templates/provision/yealink/t27g/{$mac}.cfg
@@ -61,7 +61,7 @@ account.{$row.line_number}.outbound_proxy.2.port = {$row.sip_port}
 ## ranges from 1 to 6;
 ##account.X.reregister_enable = 0
 
-{if isset($row.reregister_enable = 0
+account.{$row.line_number}.reregister_enable = 0
 account.{$row.line_number}.retry_counts =
 account.{$row.line_number}.failback_mode = 0
 account.{$row.line_number}.failback_timeout = 3600
