Fix some nway conference true/false variables
nway_conference == true was evaluating as true regardless if nway_conference was set to true or false, just as long as it had a value of any kind.
This also fixes it so that you can set nway_conference to false in the default settings and it will disable the network conference feature, previously once it was enabled on yealink phones it could not be disabled without manually changing it in the phone or a factory default.

--- a/resources/templates/provision/flyingvoice/fip11c/{$mac}.cfg
+++ b/resources/templates/provision/flyingvoice/fip11c/{$mac}.cfg
@@ -199,7 +199,7 @@ account.1.session_timer.refresher=
 account.1.session_timer.expires=
 account.1.session_timer.enable= {$flyingvoice_session_timer}
 
-account.1.conf_type = {if $nway_conference == true}2{/if}
+account.1.conf_type = {if $nway_conference == 'true'}2{elseif $nway_conference == 'false'}0{/if}
 account.1.sip_server_type=
 
 
@@ -390,7 +390,7 @@ account.1.refresh_remote_id.enable =
 #######################################################################################
 ##                                Network Conferene                                  ##       
 #######################################################################################
-account.1.conf_uri = {if $nway_conference == true}nway{$account.1.auth_id}@{$account.1.server_address}{/if}
+account.1.conf_uri = {if $nway_conference == 'true'}nway{$account.1.auth_id}@{$account.1.server_address}{/if}
 
 
 
@@ -576,7 +576,7 @@ account.2.session_timer.refresher=
 account.2.session_timer.expires=
 account.2.session_timer.enable= {$flyingvoice_session_timer}
 
-account.2.conf_type = {if $nway_conference == true}2{/if}
+account.2.conf_type = {if $nway_conference == 'true'}2{elseif $nway_conference == 'false'}0{/if}
 account.2.sip_server_type=
 
 
@@ -767,7 +767,7 @@ account.2.refresh_remote_id.enable =
 #######################################################################################
 ##                                Network Conferene                                  ##       
 #######################################################################################
-account.2.conf_uri = {if $nway_conference == true}nway{$account.2.user_id}@{$account.2.server_address}{/if}
+account.2.conf_uri = {if $nway_conference == 'true'}nway{$account.2.user_id}@{$account.2.server_address}{/if}
 
 
 
@@ -955,7 +955,7 @@ account.3.session_timer.refresher=
 account.3.session_timer.expires=
 account.3.session_timer.enable= {$flyingvoice_session_timer}
 
-account.3.conf_type = {if $nway_conference == true}2{/if}
+account.3.conf_type = {if $nway_conference == 'true'}2{elseif $nway_conference == 'false'}0{/if}
 account.3.sip_server_type=
 
 
@@ -1160,7 +1160,7 @@ account.3.refresh_remote_id.enable =
 #######################################################################################
 ##                                Network Conferene                                  ##       
 #######################################################################################
-account.3.conf_uri = {if $nway_conference == true}nway{$account.3.user_id}@{$account.3.server_address}{/if}
+account.3.conf_uri = {if $nway_conference == 'true'}nway{$account.3.user_id}@{$account.3.server_address}{/if}
 
 
 
