--- a/resources/templates/provision/flyingvoice/fip15g/{$mac}.cfg
+++ b/resources/templates/provision/flyingvoice/fip15g/{$mac}.cfg
@@ -198,7 +198,7 @@ account.1.session_timer.refresher=
 account.1.session_timer.expires=
 account.1.session_timer.enable= {$flyingvoice_session_timer}
 
-account.1.conf_type = {if $nway_conference == true}2{/if}
+account.1.conf_type = {if $nway_conference == 'true'}2{elseif $nway_conference == 'false'}0{/if}
 account.1.sip_server_type=
 
 
@@ -410,7 +410,7 @@ account.1.refresh_remote_id.enable =
 #######################################################################################
 ##                                Network Conferene                                  ##       
 #######################################################################################
-account.1.conf_uri = {if $nway_conference == true}nway{$account.1.auth_id}@{$account.1.server_address}{/if}
+account.1.conf_uri = {if $nway_conference == 'true'}nway{$account.1.auth_id}@{$account.1.server_address}{/if}
 
 
 
@@ -596,7 +596,7 @@ account.2.session_timer.refresher=
 account.2.session_timer.expires=
 account.2.session_timer.enable= {$flyingvoice_session_timer}
 
-account.2.conf_type = {if $nway_conference == true}2{/if}
+account.2.conf_type = {if $nway_conference == 'true'}2{elseif $nway_conference == 'false'}0{/if}
 account.2.sip_server_type=
 
 
@@ -808,7 +808,7 @@ account.2.refresh_remote_id.enable =
 #######################################################################################
 ##                                Network Conferene                                  ##       
 #######################################################################################
-account.2.conf_uri = {if $nway_conference == true}nway{$account.2.user_id}@{$account.2.server_address}{/if}
+account.2.conf_uri = {if $nway_conference == 'true'}nway{$account.2.user_id}@{$account.2.server_address}{/if}
 
 
 
@@ -996,7 +996,7 @@ account.3.session_timer.refresher=
 account.3.session_timer.expires=
 account.3.session_timer.enable= {$flyingvoice_session_timer}
 
-account.3.conf_type = {if $nway_conference == true}2{/if}
+account.3.conf_type = {if $nway_conference == 'true'}2{elseif $nway_conference == 'false'}0{/if}
 account.3.sip_server_type=
 
 
@@ -1222,7 +1222,7 @@ account.3.refresh_remote_id.enable =
 #######################################################################################
 ##                                Network Conferene                                  ##       
 #######################################################################################
-account.3.conf_uri = {if $nway_conference == true}nway{$account.3.user_id}@{$account.3.server_address}{/if}
+account.3.conf_uri = {if $nway_conference == 'true'}nway{$account.3.user_id}@{$account.3.server_address}{/if}
 
 
 
@@ -1410,7 +1410,7 @@ account.4.session_timer.refresher=
 account.4.session_timer.expires=
 account.4.session_timer.enable= {$flyingvoice_session_timer}
 
-account.4.conf_type = {if $nway_conference == true}2{/if} 
+account.4.conf_type = {if $nway_conference == 'true'}2{elseif $nway_conference == 'false'}0{/if} 
 account.4.sip_server_type=
 
 
@@ -1636,7 +1636,7 @@ account.4.refresh_remote_id.enable =
 #######################################################################################
 ##                                Network Conferene                                  ##       
 #######################################################################################
-account.4.conf_uri = {if $nway_conference == true}nway{$account.4.user_id}@{$account.4.server_address}{/if}
+account.4.conf_uri = {if $nway_conference == 'true'}nway{$account.4.user_id}@{$account.4.server_address}{/if}
 
 
 
@@ -1823,7 +1823,7 @@ account.5.session_timer.refresher=
 account.5.session_timer.expires=
 account.5.session_timer.enable= {$flyingvoice_session_timer}
 
-account.5.conf_type = {if $nway_conference == true}2{/if}
+account.5.conf_type = {if $nway_conference == 'true'}2{elseif $nway_conference == 'false'}0{/if}
 account.5.sip_server_type=
 
 
@@ -2049,7 +2049,7 @@ account.5.refresh_remote_id.enable =
 #######################################################################################
 ##                                Network Conferene                                  ##       
 #######################################################################################
-account.5.conf_uri = {if $nway_conference == true}nway{$account.5.user_id}@{$account.5.server_address}{/if}
+account.5.conf_uri = {if $nway_conference == 'true'}nway{$account.5.user_id}@{$account.5.server_address}{/if}
 
 
 
@@ -2236,7 +2236,7 @@ account.6.session_timer.refresher=
 account.6.session_timer.expires=
 account.6.session_timer.enable= {$flyingvoice_session_timer}
 
-account.6.conf_type = {if $nway_conference == true}2{/if}
+account.6.conf_type = {if $nway_conference == 'true'}2{elseif $nway_conference == 'false'}0{/if}
 account.6.sip_server_type=
 
 
@@ -2462,7 +2462,7 @@ account.6.refresh_remote_id.enable =
 #######################################################################################
 ##                                Network Conferene                                  ##       
 #######################################################################################
-account.6.conf_uri = {if $nway_conference == true}nway{$account.6.user_id}@{$account.6.server_address}{/if}
+account.6.conf_uri = {if $nway_conference == 'true'}nway{$account.6.user_id}@{$account.6.server_address}{/if}
 
 
 
