--- a/resources/templates/provision/flyingvoice/fip14g/{$mac}.cfg
+++ b/resources/templates/provision/flyingvoice/fip14g/{$mac}.cfg
@@ -199,7 +199,7 @@ account.1.session_timer.refresher=
 account.1.session_timer.expires=
 account.1.session_timer.enable= {$flyingvoice_session_timer}
 
-account.1.conf_type = {if $nway_conference == true}2{/if}
+account.1.conf_type = {if $nway_conference == 'true'}2{elseif $nway_conference == 'false'}0{/if}
 account.1.sip_server_type=
 
 
@@ -390,7 +390,7 @@ account.1.refresh_remote_id.enable =
 #######################################################################################
 ##                                Network Conferene                                  ##       
 #######################################################################################
-account.1.conf_uri = {if $nway_conference == true}nway{$account.1.auth_id}@{$account.1.server_address}{/if}
+account.1.conf_uri = {if $nway_conference == 'true'}nway{$account.1.auth_id}@{$account.1.server_address}{/if}
 
 
 
@@ -576,7 +576,7 @@ account.2.session_timer.refresher=
 account.2.session_timer.expires=
 account.2.session_timer.enable= {$flyingvoice_session_timer}
 
-account.2.conf_type = {if $nway_conference == true}2{/if}
+account.2.conf_type = {if $nway_conference == 'true'}2{elseif $nway_conference == 'false'}0{/if}
 account.2.sip_server_type=
 
 
@@ -767,7 +767,7 @@ account.2.refresh_remote_id.enable =
 #######################################################################################
 ##                                Network Conferene                                  ##       
 #######################################################################################
-account.2.conf_uri = {if $nway_conference == true}nway{$account.2.user_id}@{$account.2.server_address}{/if}
+account.2.conf_uri = {if $nway_conference == 'true'}nway{$account.2.user_id}@{$account.2.server_address}{/if}
 
 
 
@@ -955,7 +955,7 @@ account.3.session_timer.refresher=
 account.3.session_timer.expires=
 account.3.session_timer.enable= {$flyingvoice_session_timer}
 
-account.3.conf_type = {if $nway_conference == true}2{/if}
+account.3.conf_type = {if $nway_conference == 'true'}2{elseif $nway_conference == 'false'}0{/if}
 account.3.sip_server_type=
 
 
@@ -1160,7 +1160,7 @@ account.3.refresh_remote_id.enable =
 #######################################################################################
 ##                                Network Conferene                                  ##       
 #######################################################################################
-account.3.conf_uri = {if $nway_conference == true}nway{$account.3.user_id}@{$account.3.server_address}{/if}
+account.3.conf_uri = {if $nway_conference == 'true'}nway{$account.3.user_id}@{$account.3.server_address}{/if}
 
 
 
@@ -1348,7 +1348,7 @@ account.4.session_timer.refresher=
 account.4.session_timer.expires=
 account.4.session_timer.enable= {$flyingvoice_session_timer}
 
-account.4.conf_type = {if $nway_conference == true}2{/if} 
+account.4.conf_type = {if $nway_conference == 'true'}2{elseif $nway_conference == 'false'}0{/if} 
 account.4.sip_server_type=
 
 
@@ -1553,7 +1553,7 @@ account.4.refresh_remote_id.enable =
 #######################################################################################
 ##                                Network Conferene                                  ##       
 #######################################################################################
-account.4.conf_uri = {if $nway_conference == true}nway{$account.4.user_id}@{$account.4.server_address}{/if}
+account.4.conf_uri = {if $nway_conference == 'true'}nway{$account.4.user_id}@{$account.4.server_address}{/if}
 
 
 
@@ -1740,7 +1740,7 @@ account.5.session_timer.refresher=
 account.5.session_timer.expires=
 account.5.session_timer.enable= {$flyingvoice_session_timer}
 
-account.5.conf_type = {if $nway_conference == true}2{/if}
+account.5.conf_type = {if $nway_conference == 'true'}2{elseif $nway_conference == 'false'}0{/if}
 account.5.sip_server_type=
 
 
@@ -1945,7 +1945,7 @@ account.5.refresh_remote_id.enable =
 #######################################################################################
 ##                                Network Conferene                                  ##       
 #######################################################################################
-account.5.conf_uri = {if $nway_conference == true}nway{$account.5.user_id}@{$account.5.server_address}{/if}
+account.5.conf_uri = {if $nway_conference == 'true'}nway{$account.5.user_id}@{$account.5.server_address}{/if}
 
 
 
@@ -2132,7 +2132,7 @@ account.6.session_timer.refresher=
 account.6.session_timer.expires=
 account.6.session_timer.enable= {$flyingvoice_session_timer}
 
-account.6.conf_type = {if $nway_conference == true}2{/if}
+account.6.conf_type = {if $nway_conference == 'true'}2{elseif $nway_conference == 'false'}0{/if}
 account.6.sip_server_type=
 
 
@@ -2337,7 +2337,7 @@ account.6.refresh_remote_id.enable =
 #######################################################################################
 ##                                Network Conferene                                  ##       
 #######################################################################################
-account.6.conf_uri = {if $nway_conference == true}nway{$account.6.user_id}@{$account.6.server_address}{/if}
+account.6.conf_uri = {if $nway_conference == 'true'}nway{$account.6.user_id}@{$account.6.server_address}{/if}
 
 
 
