--- a/resources/templates/provision/flyingvoice/fip16plus/{$mac}.cfg
+++ b/resources/templates/provision/flyingvoice/fip16plus/{$mac}.cfg
@@ -186,7 +186,7 @@ account.1.session_timer.refresher=
 account.1.session_timer.expires=
 account.1.session_timer.enable= {$flyingvoice_session_timer}
 
-account.1.conf_type = {if $nway_conference == true}2{/if}
+account.1.conf_type = {if $nway_conference == 'true'}2{elseif $nway_conference == 'false'}0{/if}
 account.1.sip_server_type=
 
 
@@ -353,7 +353,7 @@ account.1.refresh_remote_id.enable =
 #######################################################################################
 ##                                Network Conferene                                  ##       
 #######################################################################################
-account.1.conf_uri = {if $nway_conference == true}nway{$account.1.auth_id}@{$account.1.server_address}{/if}
+account.1.conf_uri = {if $nway_conference == 'true'}nway{$account.1.auth_id}@{$account.1.server_address}{/if}
 
 
 
@@ -520,7 +520,7 @@ account.2.session_timer.refresher=
 account.2.session_timer.expires=
 account.2.session_timer.enable= {$flyingvoice_session_timer}
 
-account.2.conf_type = {if $nway_conference == true}2{/if}
+account.2.conf_type = {if $nway_conference == 'true'}2{elseif $nway_conference == 'false'}0{/if}
 account.2.sip_server_type=
 
 
@@ -686,7 +686,7 @@ account.2.refresh_remote_id.enable =
 #######################################################################################
 ##                                Network Conferene                                  ##       
 #######################################################################################
-account.2.conf_uri = {if $nway_conference == true}nway{$account.2.user_id}@{$account.2.server_address}{/if}
+account.2.conf_uri = {if $nway_conference == 'true'}nway{$account.2.user_id}@{$account.2.server_address}{/if}
 
 
 
