--- a/resources/templates/provision/polycom/5.x/{$mac}.cfg
+++ b/resources/templates/provision/polycom/5.x/{$mac}.cfg
@@ -45,6 +45,10 @@
 		{if $row.sip_transport == 'dns srv'}reg.{$row.line_number}.server.2.transport="DNSnaptr"{/if}
 
 		{if isset($row.register_expires)}reg.{$row.line_number}.server.2.expires="{$row.register_expires}"{else}reg.{$row.line_number}.server.2.expires="{$row.register_expires}"{/if}
+		
+		{if isset($polycom_ring_type)}reg.{$row.line_number}.ringType="{$polycom_ring_type}"{/if}
+
+		{if isset($polycom_ring_type_private)}reg.{$row.line_number}.ringType.privateLine="{$polycom_ring_type_private}"{/if}
 
 	{/foreach}
 	/>
