--- a/resources/templates/provision/flyingvoice/fip14g/{$mac}.cfg
+++ b/resources/templates/provision/flyingvoice/fip14g/{$mac}.cfg
@@ -104,7 +104,7 @@ account.1.codec.g722.enable= {if isset($flyingvoice_codec_g722_enable)}1{else}0{
 {if isset($account.1.password) }
 account.1.enable = 1
 {else}
-account.1.enable = 0
+account.1.enable = 
 {/if}
 account.1.label = {$account.1.display_name}
 account.1.display_name = {$account.1.display_name}
@@ -481,7 +481,7 @@ account.2.codec.g722.priority = {$flyingvoice_codec_2_priority}
 {if isset($account.2.password) }
 account.2.enable = 1
 {else}
-account.2.enable = 0
+account.2.enable = 
 {/if}
 account.2.label = {$account.2.display_name}
 account.2.display_name = {$account.2.display_name}
@@ -860,7 +860,7 @@ account.3.codec.g722.priority = {$flyingvoice_codec_2_priority}
 {if isset($account.3.password) }
 account.3.enable = 1
 {else}
-account.3.enable = 0
+account.3.enable = 
 {/if}
 account.3.label = {$account.3.display_name}
 account.3.display_name = {$account.3.display_name}
@@ -1253,7 +1253,7 @@ account.4.codec.g722.priority = {$flyingvoice_codec_2_priority}
 {if isset($account.4.password) }
 account.4.enable = 1
 {else}
-account.4.enable = 0
+account.4.enable = 
 {/if}
 account.4.label = {$account.4.display_name}
 account.4.display_name = {$account.4.display_name}
@@ -1645,7 +1645,7 @@ account.5.codec.g722.priority = {$flyingvoice_codec_2_priority}
 {if isset($account.5.password) }
 account.5.enable = 1
 {else}
-account.5.enable = 0
+account.5.enable = 
 {/if}
 account.5.label = {$account.5.display_name}
 account.5.display_name = {$account.5.display_name}
@@ -2037,7 +2037,7 @@ account.6.codec.g722.priority = {$flyingvoice_codec_2_priority}
 {if isset($account.6.password) }
 account.6.enable = 1
 {else}
-account.6.enable = 0
+account.6.enable = 
 {/if}
 account.6.label = {$account.6.display_name}
 account.6.display_name = {$account.6.display_name}
@@ -2430,7 +2430,7 @@ account.7.codec.g722.priority = {$flyingvoice_codec_2_priority}
 {if isset($account.7.password) }
 account.7.enable = 1
 {else}
-account.7.enable = 0
+account.7.enable = 
 {/if}
 account.7.label = {$account.7.display_name}
 account.7.display_name = {$account.7.display_name}
@@ -2823,7 +2823,7 @@ account.8.codec.g722.priority = {$flyingvoice_codec_2_priority}
 {if isset($account.8.password) }
 account.8.enable = 1
 {else}
-account.8.enable = 0
+account.8.enable = 
 {/if}
 account.8.label = {$account.8.display_name}
 account.8.display_name = {$account.8.display_name}
